bad/for_void_over_bool.example_compiler_output
ERROR
[1mbad/for_void_over_bool.lat:4:7: [1;31merror: [0;1mfor iterator `x` cannot have type `void`[m
	for (void x : true) {}
	     [1;32m^[m
